# projectNext

./: ..env.swp  .dockerignore  .env.default  .eslintignore  .eslintrc.json  .gitignore  .gitmodules  .stylelintrc.json  CLAUDE.md  Dockerfile  Dockerfile.dev  HOW_TO_MAKE_A_DRAFT.md  LICENSE  README.md  apitest.py  babel.config.js  default.env  development-entrypoint.sh  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  eslint.config.ts  jest.config.ts  jsconfig.json  mailaliasquery.sql  makeAdmin.py  next.config.js  next.config.mjs  next.config.ts  nginx.conf  package-lock.json  package.json  prisma.config.ts  test.py  tmp.json  tsconfig.json  vitest.config.mts
.devcontainer/: .bashrc  Dockerfile  devcontainer.json
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: build.yml  lint.yml  test.yml  tests.yml
containers/loki/: config.yml
containers/mimir/: config.yml
containers/nginx/: default.conf  nginx.conf  nginx.dev.conf
containers/postfix/: Dockerfile  mailaliasquery.sql  main.cf.tmpl  pgsql-aliases.cf.tmpl
docs/: Getting_Started.md  Git_Note.md  Image_System.md  Server_Actions.md
docs/Content_Managment_System/: Basic_CMS.md  (+2 more)
nginx/: default.conf  nginx.conf  nginx.dev.conf
public/: sw.js
scripts/: start.dev.sh  start.sh
sql/: create_tables_dev.sql
src/: instrumentation.ts  middleware.ts  serverSidePage.tsx
subprojects/sdl2_windows/: meson.build
tests/: PrismaTestEnvironment.ts  cleanup.ts  mockSession.ts  setup.ts  utils.ts
typings/: global.d.ts
(+3069 files in other folders)
